<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/billTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:hint="@string/bill"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintWidth_percent="0.4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/billTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:text="@string/default_value_zero"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tipPercentTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:hint="@string/tip_percent"
        app:layout_constraintBottom_toBottomOf="@+id/billTextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/billTextInputLayout"
        app:layout_constraintWidth_percent="0.4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tipPercentTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:text="@string/default_tip_percent_15"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tipAmountTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/tip_amount"
        android:textColorHint="@android:color/black"
        app:boxBackgroundColor="@color/colorLightGrey"
        app:layout_constraintEnd_toEndOf="@+id/billTextInputLayout"
        app:layout_constraintStart_toStartOf="@+id/billTextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/billTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tipAmountTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:gravity="center"
            android:inputType="none"
            android:text="@string/default_value_zero"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/totalAmountTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/total_amount"
        android:textColorHint="@android:color/black"
        app:boxBackgroundColor="@color/colorLightGrey"
        app:layout_constraintEnd_toEndOf="@+id/tipPercentTextInputLayout"
        app:layout_constraintStart_toStartOf="@+id/tipPercentTextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/tipPercentTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/default_value_zero"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:contentDescription="@string/placeholder_text_for_default_image"
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:tint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipAmountTextInputLayout"
        app:srcCompat="@drawable/ic_restaurant_black_24dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="345dp"
        android:layout_height="34dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/app_instructions"
        app:layout_constraintEnd_toEndOf="@+id/tipPercentTextInputLayout"
        app:layout_constraintStart_toStartOf="@+id/billTextInputLayout"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>